objects/ssot__Tax__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CurrencyCode__c</fullName>
        <label>Currency Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Sales Order Tax Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OriginalTaxId__c</fullName>
        <label>Original Tax</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SalesOrderProductPriceAdjTaxId__c</fullName>
        <label>Sales Order Product Price Adj Tax</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SalesOrderProductTaxId__c</fullName>
        <label>Sales Order Product Tax</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SalesOrderTaxAmount__c</fullName>
        <label>Sales Order Tax Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SalesOrderTaxType__c</fullName>
        <label>Sales Order Tax Type</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TaxAddressCityName__c</fullName>
        <label>Tax Address City Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TaxAddressCountryCode__c</fullName>
        <label>Tax Address Country Code</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TaxAddressPostalCode__c</fullName>
        <label>Tax Address Postal Code</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TaxAddressStateProvinceCodeId__c</fullName>
        <label>Tax Address State Province Code</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TaxAddressStreet1Text__c</fullName>
        <label>Tax Address Street1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TaxAddressStreet2Text__c</fullName>
        <label>Tax Address Street2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TaxClass__c</fullName>
        <label>Tax Class</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TaxErrorMessageText__c</fullName>
        <label>Tax Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TaxPolicy__c</fullName>
        <label>Tax Policy</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TaxRatePercent__c</fullName>
        <label>Tax Rate Percent</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Tax_OriginalTaxId_map_Tax_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax_OriginalTaxId_map_Tax_Id_N_1</label>
        <referenceTo>ssot__Tax__dlm</referenceTo>
        <relationshipLabel>Tax_OriginalTaxId_map_Tax_Id_N_1</relationshipLabel>
        <relationshipName>Tax_OriginalTaxId_map_Tax_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761219397_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax_TaxAddressStateProvinceCodeId_ma_rel</label>
        <referenceTo>ssot__StateProvince__dlm</referenceTo>
        <relationshipLabel>Tax_TaxAddressStateProvinceCodeId_ma_rel</relationshipLabel>
        <relationshipName>rel_1697761219397_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761219792_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax_SalesOrderProductPriceAdjTaxId_m_rel</label>
        <referenceTo>ssot__SalesOrderProductPriceAdjustmentTax__dlm</referenceTo>
        <relationshipLabel>Tax_SalesOrderProductPriceAdjTaxId_m_rel</relationshipLabel>
        <relationshipName>rel_1697761219792_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761219861_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax_SalesOrderProductTaxId_map_Sales_rel</label>
        <referenceTo>ssot__SalesOrderProductTax__dlm</referenceTo>
        <relationshipLabel>Tax_SalesOrderProductTaxId_map_Sales_rel</relationshipLabel>
        <relationshipName>rel_1697761219861_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>